--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "backend": "json-server --watch db.json --port 5000"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "botstrap": "^0.20.1",
     "core-js": "^3.8.3",
+    "json-server": "^1.0.0-beta.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.13"
   },
