--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "backend": "json-server --watch db.json --port 5000"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "botstrap": "^0.20.1",
