--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "core-js": "^3.8.3",
     "json-server": "^1.0.0-beta.0",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.13"
+    "vue-router": "^4.0.13",
+    "vue3-easy-data-table": "^1.5.47"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
