--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.3.3",
     "botstrap": "^0.20.1",
     "core-js": "^3.8.3",
+    "flatpickr": "^4.6.13",
     "json-server": "^1.0.0-beta.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.13",
